[package]
name = "wrender"
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]

[dependencies.webrender]
git = "https://github.com/servo/webrender"
commit = "0f79d9dc449e"

[dependencies.webrender_traits]
git = "https://github.com/servo/webrender"
commit = "0f79d9dc449e"

[dependencies]
app_units = "0.3"
euclid = "0.10"
gleam = "0.2"
glutin = "0.6"
