[package]
name = "wrender"
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]

[dependencies.webrender]
git = "https://github.com/servo/webrender"
rev = "4db55ba8f9a1dd482c47a984901a66e1ae2a0b27"

[dependencies.webrender_traits]
git = "https://github.com/servo/webrender"
rev = "4db55ba8f9a1dd482c47a984901a66e1ae2a0b27"

[dependencies]
app_units = "0.3"
euclid = "0.10"
gleam = "0.2"
glutin = "0.6"
